src/objects/Task__b.object
<CustomObject>
    <description>MG_Task</description>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallDisposition__c</fullName>
        <label>Call Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDurationInSeconds__c</fullName>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallObject__c</fullName>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>CallType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedDateTime__c</fullName>
        <label>CompletedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRecurrence__c</fullName>
        <label>Create Recurring Series of Tasks</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReminderSet__c</fullName>
        <label>Reminder Set</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurrenceInterval__c</fullName>
        <label>RecurrenceInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurrenceRegeneratedType__c</fullName>
        <label>Repeat This Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskSubtype__c</fullName>
        <label>TaskSubtype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What__c</fullName>
        <label>Related To</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <label>Name</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Task_Index</fullName>
        <fields>
            <name>Who__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>What__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Task Index</label>
    </indexes>
    <label>Task</label>
    <pluralLabel>Tasks</pluralLabel>
</CustomObject>